mesa (23.2.0~rc3-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * rules: Add virtio vulkan driver.
  * rules: Enable panfrost vulkan driver on armhf/arm64.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 07 Sep 2023 13:43:04 +0300

mesa (23.1.6-1) unstable; urgency=medium

  * New upstream release.
  * fix-gtk4-autpkgtest.diff: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Aug 2023 13:24:03 +0300

mesa (23.1.4-1) unstable; urgency=medium

  [ Diederik de Haas ]
  * Drop transitional libegl1-mesa package (Closes: #1032712)
  * Drop transitional libgles2-mesa package (Closes: #1032718)
  * Drop transitional libwayland-egl1-mesa package (Closes: #1032737)
  * Drop transitional libgl1-mesa-glx package (Closes: #1032738)
  * d/README.source: Update git repo location to Salsa

  [ Timo Aaltonen ]
  * New upstream release.
  * fix-gtk4-autpkgtest.diff: Fix loading swrast driver on wayland.
    (Closes: #1039922)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 28 Jul 2023 17:39:12 +0300

mesa (23.1.3-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 05 Jul 2023 17:23:23 +0300

mesa (23.1.2-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 12 Jun 2023 11:33:47 +0300

mesa (23.1.1-1) experimental; urgency=medium

  * New upstream release.
  * rules: Set VERSION so that it also includes the packaging
    revision. (LP: #2020604)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 30 May 2023 11:27:24 +0300

mesa (23.1.0-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 May 2023 13:37:15 +0300

mesa (23.1.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 02 May 2023 14:32:42 +0300

mesa (23.1.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * patches: Refreshed.
