@@ -27,15 +27,9 @@ else
   buildflags = \
 	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -fno-optimize-sibling-calls" DEB_CXXFLAGS_MAINT_APPEND="-Wall -fno-optimize-sibling-calls" dpkg-buildflags --export=configure)
   else
-    ifneq (,$(filter $(DEB_HOST_ARCH), ppc64el))
-    # Workaround for https://gitlab.freedesktop.org/mesa/mesa/-/issues/5315
-    buildflags = \
-	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -O2" DEB_CXXFLAGS_MAINT_APPEND="-Wall -O2" dpkg-buildflags --export=configure)
-    else
     # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=83143
     buildflags = \
 	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -O1" DEB_CXXFLAGS_MAINT_APPEND="-Wall -O1" dpkg-buildflags --export=configure)
-    endif
   endif
 endif
 
